Slight update to change how the game works

--- a/Hangman/Hangman.vcxproj.filters
+++ b/Hangman/Hangman.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="Hangman.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="gameStart.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
